fix spacing on media queries

--- a/src/components/LeakedPasswords/styles.scss
+++ b/src/components/LeakedPasswords/styles.scss
@@ -83,7 +83,7 @@
 
   @media (max-width: 880px) {
     &__title {
-      margin-top: 6.25rem;
+      margin-top: 14rem;
     }
   }
 
