--- a/src/components/OrganizedPasswords/styles.scss
+++ b/src/components/OrganizedPasswords/styles.scss
@@ -33,9 +33,9 @@
     }
   }
 
-  @media (max-width: 680px) {
+  @media (max-width: 780px) {
     &__title {
-      margin-top: 6rem;
+      margin-top: 8rem;
     }
   }
 
